--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-Time Incremental Value Counter</title>
     <style>
+        @font-face {
+            font-family: 'Ancient Medium';
+            src: url('Ancient Medium.ttf') format('truetype');
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Ancient Medium', Arial, sans-serif;
             text-align: center;
             background-color: black;
             color: white;
@@ -67,5 +71,4 @@
         setInterval(fetchGoldPrice, 60000);
     </script>
 </body>
-</h
-    tml>
+</html>
